--- a/config/database.yml
+++ b/config/database.yml
@@ -6,10 +6,12 @@ development:
   username: sample_app
   password: password1
 
-test:
+test: &test
   adapter: postgresql
   encoding: unicode
   database: sample_app_test
   pool: 5
   username: sample_app
   password: password1
+cucumber:
+  <<: *test
